force-app/main/default/objects/ChatSyncAck__e/ChatSyncAck__e.object-meta.xml
<CustomObject>
    <description>Platform Event: External system ACK back to Salesforce</description>
    <label>Chat Sync Ack</label>
    <pluralLabel>Chat Sync Acks</pluralLabel>
</CustomObject>