force-app/main/default/objects/ChatSyncAck__e/fields/ExternalMessageId__c.field-meta.xml
<CustomField>
    <fullName>ExternalMessageId__c</fullName>
    <label>External Message Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>