force-app/main/default/objects/ChatSyncAck__e/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <label>Message Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>